--- a/src/main/resources/com/example/petralibrarymanager/login-view.fxml
+++ b/src/main/resources/com/example/petralibrarymanager/login-view.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="rootPane" prefHeight="589.0" prefWidth="894.0" styleClass="root-pane" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.petralibrarymanager.LoginController">
+<StackPane fx:id="rootPane" prefHeight="589.0" prefWidth="894.0" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.petralibrarymanager.LoginController">
    <children>
-      <VBox fx:id="loginVBox" alignment="CENTER">
+      <VBox fx:id="loginVBox" alignment="CENTER" styleClass="login-section">
          <padding>
             <Insets bottom="50.0" left="20.0" right="20.0" top="50.0" />
          </padding>
@@ -43,23 +43,19 @@
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="loginButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onLoginClicked" text="LOGIN">
+            <Button fx:id="loginButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onLoginClicked" stylesheets="@styles/content.css" text="LOGIN">
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
                <styleClass>
-                  <String fx:value="dashboard-button" />
-                  <String fx:value="acrylic-green-glass" />
+                  <String fx:value="acrylic-button" />
+                  <String fx:value="acrylic-button-green" />
                </styleClass>
             </Button>
          </children>
          <StackPane.margin>
             <Insets bottom="100.0" left="200.0" right="200.0" top="100.0" />
          </StackPane.margin>
-         <styleClass>
-            <String fx:value="glass-vbox" />
-            <String fx:value="acrylic-purple-glass" />
-         </styleClass>
       </VBox>
    </children>
 </StackPane>
