--- a/src/main/resources/com/example/petralibrarymanager/catalog-super-subview.fxml
+++ b/src/main/resources/com/example/petralibrarymanager/catalog-super-subview.fxml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="HELLO, THIS IS THE CATALOG MANAGEMENT" />
+      <TableView prefHeight="472.0" prefWidth="679.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="ISBN" />
+          <TableColumn prefWidth="218.0" text="TITLE" />
+            <TableColumn prefWidth="136.0" text="PUBLISHER" />
+            <TableColumn prefWidth="164.0" text="PUBLICATION YEAR" />
+            <TableColumn prefWidth="117.0" text="TOTAL COPIES" />
+            <TableColumn prefWidth="115.0" text="AVAILABLE COPIES" />
+        </columns>
+      </TableView>
    </children>
 </StackPane>
