--- a/src/main/resources/com/example/petralibrarymanager/styles/style.css
+++ b/src/main/resources/com/example/petralibrarymanager/styles/style.css
@@ -110,11 +110,14 @@
 .glass-anchor {
     -fx-background-color: rgba(0, 255, 255, 0.2);
     -fx-background-radius: 0 0 0 0;  /* Only left corners rounded */
-    -fx-border-radius: 0 0 0 0;
     -fx-border-color: rgba(255, 255, 255, 0.3);
     -fx-border-width: 1;
-    -fx-padding: 20 20 0 0;
+    -fx-padding: 0 0 0 0;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0.2, 0, 4);
+}
+
+.content-container {
+    -fx-padding: 0;
 }
 
 
