--- a/src/main/resources/com/example/petralibrarymanager/reservations-super-subview.fxml
+++ b/src/main/resources/com/example/petralibrarymanager/reservations-super-subview.fxml
@@ -6,7 +6,7 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="reservationTable" prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="reservationsTable" prefHeight="200.0" prefWidth="200.0">
         <columns>
           <TableColumn fx:id="bookTitleColumn" prefWidth="180.0" text="TITLE" />
           <TableColumn fx:id="borrowerNameColumn" prefWidth="112.0" text="USER NAME" />
