--- a/src/main/resources/com/example/petralibrarymanager/settings-super-subview.fxml
+++ b/src/main/resources/com/example/petralibrarymanager/settings-super-subview.fxml
@@ -1,11 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="600.0" stylesheets="@styles/content.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="HELLO, THIS IS THE SETTING" />
+      <VBox prefHeight="528.0" prefWidth="600.0" styleClass="root-dashboard-pane" stylesheets="@styles/style.css">
+         <children>
+            <Label prefHeight="30.0" prefWidth="81.0" styleClass="section-title" text="Profile:">
+               <VBox.margin>
+                  <Insets left="15.0" top="10.0" />
+               </VBox.margin>
+            </Label>
+            <HBox prefHeight="17.0" prefWidth="449.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="66.0" text="Username">
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="usernameLabel" text="Label">
+                     <HBox.margin>
+                        <Insets left="80.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox layoutX="10.0" layoutY="91.0" prefHeight="0.0" prefWidth="600.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="66.0" text="Email">
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="emailLabel" layoutX="10.0" layoutY="10.0" text="Label">
+                     <HBox.margin>
+                        <Insets left="80.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="0.0" prefWidth="600.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="66.0" text="Privilege">
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="privilegeLabel" layoutX="10.0" layoutY="10.0" text="Label">
+                     <HBox.margin>
+                        <Insets left="80.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox layoutX="10.0" layoutY="191.0" prefHeight="0.0" prefWidth="600.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="66.0" text="Created at">
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="createdAtLabel" layoutX="10.0" layoutY="10.0" text="Label">
+                     <HBox.margin>
+                        <Insets left="80.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </HBox>
+            <Button fx:id="changePasswordButton" mnemonicParsing="false" onAction="#changePasswordButtonClicked" text="Change Password">
+               <VBox.margin>
+                  <Insets left="15.0" top="10.0" />
+               </VBox.margin>
+               <styleClass>
+                  <String fx:value="acrylic-button-setting" />
+                  <String fx:value="acrylic-button-pink" />
+               </styleClass>
+            </Button>
+            <Label prefHeight="17.0" prefWidth="137.0" text="Manage users data.">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets left="15.0" />
+               </padding>
+            </Label>
+            <Button fx:id="manageUsersButton" mnemonicParsing="false" onAction="#manageUsersButtonClicked" text="Manage Users">
+               <VBox.margin>
+                  <Insets left="15.0" top="5.0" />
+               </VBox.margin>
+               <styleClass>
+                  <String fx:value="acrylic-button-setting" />
+                  <String fx:value="acrylic-button-blue" />
+               </styleClass>
+            </Button>
+            <Label layoutX="10.0" layoutY="186.0" prefHeight="17.0" prefWidth="220.0" text="Manage borrowing policies.">
+               <padding>
+                  <Insets left="15.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Label>
+            <Button fx:id="manageBorrowingPoliciesButton" layoutX="25.0" layoutY="213.0" mnemonicParsing="false" onAction="#changeBorrowingPoliciesButtonClicked" text="Borrowing Policies">
+               <VBox.margin>
+                  <Insets left="15.0" top="5.0" />
+               </VBox.margin>
+               <styleClass>
+                  <String fx:value="acrylic-button-setting" />
+                  <String fx:value="acrylic-button-blue" />
+               </styleClass>
+            </Button>
+            <Label text="Developed by: @adith @benhard @felix">
+               <VBox.margin>
+                  <Insets left="15.0" top="100.0" />
+               </VBox.margin>
+            </Label>
+            <Label text="Version 01.00.00">
+               <VBox.margin>
+                  <Insets left="15.0" top="10.0" />
+               </VBox.margin>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </StackPane>
